# vire

./: .env.example  .gitignore  README.md  RELEASE.md  index.html  package-lock.json  package.json
.github/workflows/: dependency-advisories.yml
docs/: active-window-capture.md  backup-restore.md  langfuse-local-setup.md
observability/langfuse/: .env.example  README.md  docker-compose.yml
observability/pi-observe/: README.md
openspec/changes/task-001-repo-path-assessment/: RELEASE.md  arch-review.md  design.md  docs.md  proposal.md  qa.md  review.md  salvage-reuse-inventory.md  sec.md  tasks.md
openspec/changes/task-002-macos-capture-feasibility/: RELEASE.md  arch-review.md  capture-feasibility-report.md  design.md  docs-review.md  proposal.md  qa.md  review.md  sec.md  tasks.md
openspec/changes/task-032-ai-time-suggestions/: qa.md  (+13 more)
scripts/: langfuse-down.sh  langfuse-smoke-test.sh  langfuse-up.sh  setup-local-observability.sh
spikes/task-002-macos-capture/: .gitignore  README.md
spikes/task-007-langfuse-importer/: .gitignore  README.md
src/: active-window-settings-ui.ts  date.ts  env-mapping-ui.ts  forms.ts  html.ts  import-report.ts  langfuse-settings.ts  main.ts  report-ranges.ts  scroll.ts  shell-chrome.ts  style.css  suggestions-ui.ts  summary-cards.ts  update-check-ui.ts
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/source/: generate-vire-mark.mjs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/active_window/: capture.rs  config.rs  mod.rs  model.rs  settings_api.rs  store.rs  tests.rs
src-tauri/src/env_mapping/: mod.rs  tests.rs
src-tauri/src/langfuse/: api.rs  config.rs  discovery.rs  importer.rs  mod.rs  model.rs  store.rs  tests.rs
src-tauri/src/runtime_observer/: config.rs  ingest.rs  mod.rs  model.rs  reconcile.rs  store.rs  tests.rs
src-tauri/src/settings/: mod.rs  secret_store.rs  tests.rs
src-tauri/src/suggestions/: engine.rs  mod.rs  store.rs  tests.rs
src-tauri/src/update_check/: mod.rs  tests.rs
src-tauri/tests/: adversarial.rs
tests/: activeWindowSettingsUi.test.mjs  date.test.mjs  envMappingUi.test.mjs  forms.test.mjs  htmlEscape.test.mjs  importReport.test.mjs  langfuse-down-volume-confirmation.test.mjs  langfuse.compose.healthcheck.test.mjs  langfuse.postgres-volume.adversarial.test.mjs  langfuse.postgres-volume.test.mjs  langfuseSettings.test.mjs  pi-observe.adversarial.test.mjs  pi-observe.examples.test.mjs  pi-observe.lifecycle.test.mjs  pi-observe.security.test.mjs  pi-observe.test.mjs  reportRanges.test.mjs  scroll.test.mjs  shellChrome.test.mjs  suggestionsUi.test.mjs  summaryCards.test.mjs  updateCheckUi.test.mjs
(+285 files in other folders)
