[package]
name = "vire"
version = "0.1.0"
description = "Vire local time tracker"
authors = ["Vire"]
edition = "2021"

[lib]
name = "vire_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.2", features = [] }
tauri-plugin-dialog = "2.2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
# Read-only Langfuse REST importer (Rust core only; renderer stays off-network).
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
url = "2"

[dev-dependencies]
tempfile = "3"
