[package]
name = "vire"
version = "0.1.0"
description = "Vire local time tracker"
authors = ["Vire"]
edition = "2021"

[lib]
name = "vire_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.2", features = [] }
tauri-plugin-dialog = "2.2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
# Read-only Langfuse REST importer (Rust core only; renderer stays off-network).
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
url = "2"
# DEC-026 / SEC-009: the Langfuse secret key lives in the macOS Keychain, never SQLite. Native
# binding dependency (Security framework). Mac-first prototype; apple-native is the only backend.
keyring = { version = "3", features = ["apple-native"] }

# TASK-048: zero-permission active-app + idle capture (macOS-only, in-process — no Swift sidecar /
# externalBin / IPC, design §3). These are the ONLY two new direct deps (tasks.md §1); objc2 +
# objc2-foundation are pulled in transitively. NSWorkspace gives frontmost-app identity and
# CGEventSource gives last-event age (idle) — both zero-permission (no TCC), no event tap, no AX.
[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", default-features = false, features = ["std", "NSWorkspace", "NSRunningApplication"] }
objc2-core-graphics = { version = "0.3", default-features = false, features = ["std", "CGEventSource", "CGEventTypes"] }

[dev-dependencies]
tempfile = "3"
